--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-RESTful==0.3.6
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
+gunicorn==20.1.0
 Markdown==2.6.9
 MarkupSafe==1.1.1
 python-dateutil==2.6.1
